--- a/src/styles/Landing.css
+++ b/src/styles/Landing.css
@@ -97,4 +97,12 @@
     width: 80px;
     height: 80px;
   }
+
+  .circle-deco.top-right {
+    width: 180px;
+    height: 180px;
+    background: #007bff;
+    top: 60px;
+    right: 100px;
+  }
 }
